# modules/core-platform/api/v1/openapi.json
@@ -3865,6 +3865,50 @@
         "tags" : [ "Health Resource" ]
       }
     },
+    "/api/v1/identity/health" : {
+      "get" : {
+        "responses" : {
+          "200" : {
+            "description" : "OK"
+          }
+        },
+        "summary" : "Health",
+        "tags" : [ "Identity Resource" ]
+      }
+    },
+    "/api/v1/identity/login" : {
+      "get" : {
+        "responses" : {
+          "200" : {
+            "description" : "OK"
+          }
+        },
+        "summary" : "Login",
+        "tags" : [ "Identity Resource" ]
+      }
+    },
+    "/api/v1/identity/refresh" : {
+      "get" : {
+        "responses" : {
+          "200" : {
+            "description" : "OK"
+          }
+        },
+        "summary" : "Refresh",
+        "tags" : [ "Identity Resource" ]
+      }
+    },
+    "/api/v1/identity/sessions" : {
+      "get" : {
+        "responses" : {
+          "200" : {
+            "description" : "OK"
+          }
+        },
+        "summary" : "Sessions",
+        "tags" : [ "Identity Resource" ]
+      }
+    },
     "/api/v1/loyalty/enroll/{userId}" : {
       "post" : {
         "parameters" : [ {
